--- a/index.html
+++ b/index.html
@@ -3,29 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
+    <link rel="stylesheet" href="style.css">
     <title>Reservia</title>
 </head>
 <body>
+<!-- Header -->
     <header>
-        <img src="images/logo/Reservia.svg" alt="Logo Reservia">
-        <nav>
-            <ul>
-                <li>Hébergements</li>
-                <li>Activités</li>
-                <li>S'inscrire</li>
-            </ul>
-        </nav>
+        <div id="titre_principal"> 
+            <img src="images/logo/Reservia.svg" alt="Logo Reservia">
+            <nav>
+                <ul>
+                    <li><a href="#">Hébergements</a></li>
+                    <li><a href="#">Activités</a></li>
+                    <li><a href="#">S'inscrire</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
+    <!-- Section 1 -->
+    <section>
+        <div class="container">
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre ville ou en pleine nature</p>
+            <div id="recherche">
+                <form method="post" action="#">
+                    <p>
+                        <label for="localisation"><i class="fas fa-map-marker-alt"></i></label>
+                        <input type="search" name="localisation" id="localisation" placeholder="Marseille, France" />
+                        <input type="button" value="Rechercher" />
+                    </p>
+                </form>
+            </div>
+            <div id="filtres">
+                <h3>Filtres </h3>
+                <div id="economique">
+                    <p><i class="fas fa-money-bill-wave"></i>Économique</p>
+                </div>
+                <div id="familial">
+                    <p><i class="fas fa-child"></i>Familial</p>
+                </div>
+                <div id="romantique">
+                    <p><i class="fas fa-heart"></i>Romantique</p>
+                </div>
+                <div id="animaux">
+                    <p><i class="fas fa-dog"></i>Animaux autorisés</p>
+                </div>
+
+            </div>
+            <p><i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville </p>
+        </div>
+    </section>
+<!-- Section 2 -->
+    <section>
+        <div class="container">
+            <div id="hebergements">
+                <h2>Hébergements à Marseille</h2>
+                <p>
+                    <a href="#">
+                        <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière">
+                        <h3>Auberge de la Cannebière</h3>
+                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel du port">
+                        <h3>Hôtel du port</h3>
+                        <p>Nuit à partir de 52<strong>€</strong></p>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hotel Les mouettes">
+                        <h3>Hôtel Les mouettes</h3>
+                        <p>Nuit à partir de 76<strong>€</strong></p>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel de la mer">
+                        <h3>Hôtel de la mer</h3>
+                        <p>Nuit à partir de 46<strong>€</strong></p>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i>
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
+                        <h3>Auberge Le Panier</h3>
+                        <p>Nuit à partir de <strong>23€</strong></p>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
+                        <h3>Hôtel chez Amina</h3>
+                        <p>Nuit à partir de 96<strong>€</strong></p>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </a>
+                </p>
+            </div>
+            <div id="populaires">
+
+            </div>
+        </div>
+    </section>
+<!-- Section 3-->
     <section>
     </section>
-
-    <section>
-    </section>
-
-    <section>
-    </section>
-
+<!-- Footer -->
     <footer>
     </footer>
 </body>
