--- a/index.html
+++ b/index.html
@@ -108,17 +108,104 @@
                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </a>
                 </p>
+                <a href="#">Afficher plus</a>
             </div>
             <div id="populaires">
-
+                <h2>Les plus populaires</h2>
+                <i class="fas fa-chart-line"></i>
+                <p>
+                    <a href="#">
+                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                        <h3>Hôtel Le soleil du matin</h3>
+                        <p>Nuit à partir de 128<strong>€</strong></p>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau">
+                        <h3>Au coeur de l'eau Chambres d'hotes</h3>
+                        <p>Nuit à partir de 71<strong>€</strong></p>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et blanc">
+                        <h3>Hôtel Tout bleu et Blanc</h3>
+                        <p>Nuit à partir de 68<strong>€</strong></p>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                    </a>
+                </p>
             </div>
         </div>
     </section>
 <!-- Section 3-->
     <section>
+        <div class="container">
+            <h2>Activités à Marseille</h2>
+            <div id="gauche">
+                <p>
+                    <a href="#">
+                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
+                        <h3>Vieux Port</h3>
+                    </a>  
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                        <h3>Fort de Pomègues</h3>
+                    </a>  
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du Frioul">
+                        <h3>Îles du Frioul</h3>
+                    </a>  
+                </p>
+            </div>
+            <div id="droite">
+                <p>
+                    <a href="#">
+                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des calanques">
+                        <h3>Parc National des Calanques</h3>
+                    </a>  
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                    </a>  
+                </p>
+                <p>
+                    <a href="#">
+                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                        <h3>Parc Longchamp</h3>
+                    </a>  
+                </p>
+            </div>
+        </div>
     </section>
 <!-- Footer -->
     <footer>
+        <div id="basDePage">
+            <div id="aPropos">
+                <h3>A propos</h3>
+                <a href="#">Fonctionnement du site</a>
+                <a href="#">Conditions générales de vente</a>
+                <a href="#">Données et confidentialité</a>
+            </div>
+            <div id="nosHebergements">
+                <h3>Nos hébergements</h3>
+                <a href="#">Charte qualité</a>
+                <a href="#">Soumettre votre hôtel</a>
+            </div>
+            <div id="assistance">
+                <h3>Assistance</h3>
+                <a href="#">Centre d'aide</a>
+                <a href="#">Nous contacter</a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
