--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;621&display=swap" rel="stylesheet"><body>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;621&display=swap" rel="stylesheet">
+    <title>Reservia</title>
+</head>    
+<body>
 <!-- Header -->
     <header>
         <div id="titre_principal"> 
@@ -62,7 +65,7 @@
                             <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière">
                             <h3>Auberge de la Cannebière</h3>
                             <p>Nuit à partir de <strong>25€</strong></p>
-                            <div id="class"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                            <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                         </a>
                     </div>
                     <div class="vignettesHeb">
@@ -108,87 +111,101 @@
                         </a>
                     </div>
                 </div>  
-                <a href="#">Afficher plus</a>
+                <span><a href="#">Afficher plus</a></span>
             </div>
             <div id="populaires">
-                <h2>Les plus populaires</h2>
-                <i class="fas fa-chart-line"></i>
-                <div class="vignettesPop">
-                    <a href="#">
-                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
-                        <h3>Hôtel Le soleil du matin</h3>
-                        <p>Nuit à partir de 128<strong>€</strong></p>
-                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                    </a>
+                <div id="titrePop"> 
+                    <h2>Les plus populaires</h2>
+                    <i class="fas fa-chart-line"></i>
                 </div>
-                <div class="vignettesPop">
-                    <a href="#">
-                        <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau">
-                        <h3>Au coeur de l'eau Chambres d'hotes</h3>
-                        <p>Nuit à partir de 71<strong>€</strong></p>
-                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
-                    </a>
-                </div>
-                <div class="vignettesPop">
-                    <a href="#">
-                        <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et blanc">
-                        <h3>Hôtel Tout bleu et Blanc</h3>
-                        <p>Nuit à partir de 68<strong>€</strong></p>
-                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
-                    </a>
+                <div id="colonnePop">
+                    <div class="vignettesPop">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                            <div class="textePop">
+                                <h3>Hôtel Le soleil du matin</h3>
+                                <p>Nuit à partir de 128<strong>€</strong></p>
+                                <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="vignettesPop">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau">
+                            <div class="textePop">
+                                <h3>Au coeur de l'eau Chambres d'hotes</h3>
+                                <p>Nuit à partir de 71<strong>€</strong></p>
+                                <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="vignettesPop">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et blanc">
+                            <div class="textePop">
+                                <h3>Hôtel Tout bleu et Blanc</h3>
+                                <p>Nuit à partir de 68<strong>€</strong></p>
+                                <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                            </div>
+                        </a>
+                    </div>    
                 </div>
             </div>
         </div>
     </section>
 <!-- Section 3-->
     <section>
-        <div class="container">
-            <h2 id="activite">Activités à Marseille</h2>
+        <h2 id="titreAct">Activités à Marseille</h2>
+        <div class="containerAct">
             <div id="gauche">
-                <p>
+                <div id="imageSimpleGauche">
                     <a href="#">
                         <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
                         <h3>Vieux Port</h3>
                     </a>  
-                </p>
-                <p>
-                    <a href="#">
-                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
-                        <h3>Fort de Pomègues</h3>
-                    </a>  
-                </p>
-                <p>
-                    <a href="#">
-                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du Frioul">
-                        <h3>Îles du Frioul</h3>
-                    </a>  
-                </p>
+                </div>
+                <div id="imageDoubleGauche">
+                    <div id="hautGauche">
+                        <a href="#">
+                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                            <h3>Fort de Pomègues</h3>
+                        </a>  
+                    </div>
+                    <div id="basGauche">
+                        <a href="#">
+                            <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du Frioul">
+                            <h3>Îles du Frioul</h3>
+                        </a>  
+                    </div>
+                </div>
             </div>
             <div id="droite">
-                <p>
+                <div id="imageSimpleDroite">
                     <a href="#">
                         <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des calanques">
                         <h3>Parc National des Calanques</h3>
                     </a>  
-                </p>
-                <p>
-                    <a href="#">
-                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
-                        <h3>Notre-Dame-de-la-Garde</h3>
-                    </a>  
-                </p>
-                <p>
-                    <a href="#">
-                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
-                        <h3>Parc Longchamp</h3>
-                    </a>  
-                </p>
+                </div>
+                <div id="imageDoubleDroite">
+                    <div id="hautDroite">
+                        <a href="#">
+                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                            <h3>Notre-Dame-de-la-Garde</h3>
+                        </a>  
+                    </div>
+                    <div id="basDroite">
+                        <a href="#">
+                            <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                            <h3>Parc Longchamp</h3>
+                        </a>  
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 <!-- Footer -->
     <footer>
-        <div id="basDePage">
+        
             <div id="aPropos">
                 <h3>A propos</h3>
                 <a href="#">Fonctionnement du site</a>
@@ -205,7 +222,7 @@
                 <a href="#">Centre d'aide</a>
                 <a href="#">Nous contacter</a>
             </div>
-        </div>
+        
     </footer>
 </body>
 </html>
