--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <nav>
                 <ul>
                     <li><a href="#hebergements">Hébergements</a></li>
-                    <li><a href="#activite">Activités</a></li>
-                    <li><a href="#"><strong>S'inscrire</strong></a></li>
+                    <li><a href="#titreAct">Activités</a></li>
+                    <li id="inscription"><a href="#"><strong>S'inscrire</strong></a></li>
                 </ul>
             </nav>
         </div>
@@ -30,7 +30,7 @@
             <p>En plein centre ville ou en pleine nature</p>
             <div id="recherche">
                 <form method="post" action="#">
-                        <label for="localisation" class="gps"><i class="fas fa-map-marker-alt"></i></label><input type="search" name="localisation" id="localisation" placeholder="Marseille, France" /><input type="button" class="btn" value="Rechercher" />  
+                        <label for="localisation" class="gps"><i class="fas fa-map-marker-alt"></i></label><input type="search" name="localisation" id="localisation" placeholder="Marseille, France" /><input type="button" class="btn" value="Rechercher" />
                 </form>
             </div>
             <div id="filtres">
@@ -205,24 +205,22 @@
     </section>
 <!-- Footer -->
     <footer>
-        
-            <div id="aPropos">
-                <h3>A propos</h3>
-                <a href="#">Fonctionnement du site</a>
-                <a href="#">Conditions générales de vente</a>
-                <a href="#">Données et confidentialité</a>
-            </div>
-            <div id="nosHebergements">
-                <h3>Nos hébergements</h3>
-                <a href="#">Charte qualité</a>
-                <a href="#">Soumettre votre hôtel</a>
-            </div>
-            <div id="assistance">
-                <h3>Assistance</h3>
-                <a href="#">Centre d'aide</a>
-                <a href="#">Nous contacter</a>
-            </div>
-        
+        <div id="aPropos">
+            <h3>A propos</h3>
+            <a href="#">Fonctionnement du site</a>
+            <a href="#">Conditions générales de vente</a>
+            <a href="#">Données et confidentialité</a>
+        </div>
+        <div id="nosHebergements">
+            <h3>Nos hébergements</h3>
+            <a href="#">Charte qualité</a>
+            <a href="#">Soumettre votre hôtel</a>
+        </div>
+        <div id="assistance">
+            <h3>Assistance</h3>
+            <a href="#">Centre d'aide</a>
+            <a href="#">Nous contacter</a>
+        </div>
     </footer>
 </body>
 </html>
