--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
             <img src="images/logo/Reservia.svg" alt="Logo Reservia">
             <nav>
                 <ul>
-                    <li><a href="#hebergements">Hébergements</a></li>
-                    <li><a href="#titreAct">Activités</a></li>
-                    <li id="inscription"><a href="#"><strong>S'inscrire</strong></a></li>
+                    <div id="menu">
+                        <li><a href="#hebergements">Hébergements</a></li>
+                        <li><a href="#titreAct">Activités</a></li>
+                    </div>
+                    <div id="inscription">
+                        <li><a href="#"><strong>S'inscrire</strong></a></li>
+                    </div>
                 </ul>
             </nav>
         </div>
@@ -158,20 +162,20 @@
         <h2 id="titreAct">Activités à Marseille</h2>
         <div class="containerAct">
             <div id="gauche">
-                <div id="imageSimpleGauche">
+                <div id="imageSimpleGauche" class="vignettesAct">
                     <a href="#">
                         <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
                         <h3>Vieux Port</h3>
                     </a>  
                 </div>
-                <div id="imageDoubleGauche">
-                    <div id="hautGauche">
+                <div id="imageDoubleGauche" >
+                    <div id="hautGauche" class="vignettesAct">
                         <a href="#">
                             <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                             <h3>Fort de Pomègues</h3>
                         </a>  
                     </div>
-                    <div id="basGauche">
+                    <div id="basGauche" class="vignettesAct">
                         <a href="#">
                             <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du Frioul">
                             <h3>Îles du Frioul</h3>
@@ -180,20 +184,20 @@
                 </div>
             </div>
             <div id="droite">
-                <div id="imageSimpleDroite">
+                <div id="imageSimpleDroite" class="vignettesAct">
                     <a href="#">
                         <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des calanques">
                         <h3>Parc National des Calanques</h3>
                     </a>  
                 </div>
                 <div id="imageDoubleDroite">
-                    <div id="hautDroite">
+                    <div id="hautDroite" class="vignettesAct">
                         <a href="#">
                             <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                             <h3>Notre-Dame-de-la-Garde</h3>
                         </a>  
                     </div>
-                    <div id="basDroite">
+                    <div id="basDroite" class="vignettesAct">
                         <a href="#">
                             <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
                             <h3>Parc Longchamp</h3>
