Site fonctionnel, avant finitions

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>En plein centre ville ou en pleine nature</p>
             <div id="recherche">
                 <form method="post" action="#">
-                        <label for="localisation" class="gps"><i class="fas fa-map-marker-alt"></i></label><input type="search" name="localisation" id="localisation" placeholder="Marseille, France" /><input type="button" class="btn" value="Rechercher" />
+                        <label for="localisation" class="gps"><i class="fas fa-map-marker-alt"></i></label><input type="search" name="localisation" id="localisation" placeholder="Marseille, France" /><input type="button" class="btn" value="Rechercher" /><button name="bouton"><i class="fas fa-search"></i></button>
                 </form>
             </div>
             <div id="filtres">
@@ -164,14 +164,14 @@
             <div id="gauche">
                 <div id="imageSimpleGauche" class="vignettesAct">
                     <a href="#">
-                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
+                        <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
                         <h3>Vieux Port</h3>
                     </a>  
                 </div>
                 <div id="imageDoubleGauche" >
                     <div id="hautGauche" class="vignettesAct">
                         <a href="#">
-                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                            <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                             <h3>Fort de Pomègues</h3>
                         </a>  
                     </div>
@@ -186,7 +186,7 @@
             <div id="droite">
                 <div id="imageSimpleDroite" class="vignettesAct">
                     <a href="#">
-                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des calanques">
+                        <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des calanques">
                         <h3>Parc National des Calanques</h3>
                     </a>  
                 </div>
