modifications de la navbar ok

--- a/index.html
+++ b/index.html
@@ -10,21 +10,17 @@
 </head>    
 <body>
 <!-- Header -->
-    <header>
-        <div id="titre_principal"> 
+    <header id="titre_principal">
             <img src="images/logo/Reservia.svg" alt="Logo Reservia">
-            <nav>
-                <ul>
-                    <div id="menu">
-                        <li><a href="#hebergements">Hébergements</a></li>
-                        <li><a href="#titreAct">Activités</a></li>
-                    </div>
-                    <div id="inscription">
-                        <li><a href="#"><strong>S'inscrire</strong></a></li>
-                    </div>
-                </ul>
-            </nav>
-        </div>
+            <div id="topMenu">
+                    <nav id="menu"> 
+                        <ul>
+                            <li><a href="#hebergements">Hébergements</a></li>
+                            <li><a href="#titreAct">Activités</a></li>
+                        </ul>
+                    </nav>
+                <a href="#" id="inscription"><strong>S'inscrire</strong></a>
+            </div>
     </header>
 
     <!-- Section 1 -->
